--- a/openassessment/locale/ru/LC_MESSAGES/django.po
+++ b/openassessment/locale/ru/LC_MESSAGES/django.po
@@ -2421,3 +2421,129 @@ msgstr "Количество лучших ответов задано невер
 #: openassessment/xblock/validation.py:376
 msgid "The submission format is invalid."
 msgstr "Неправильный формат ответа."
+
+#: openassessment/xblock/defaults.py:7
+msgid ""
+"Censorship in the Libraries 'All of us can think of a book that we hope none of our children "
+"or any other children have taken off the shelf. But if I have the right to remove that book "
+"from the shelf -- that work I abhor -- then you also have exactly the same right and so does "
+"everyone else. And then we have no books left on the shelf for any of us.' --Katherine Paterson, "
+"Author Write a persuasive essay to a newspaper reflecting your views on censorship in libraries. "
+"Do you believe that certain materials, such as books, music, movies, magazines, etc., should be "
+"removed from the shelves if they are found offensive? Support your position with convincing arguments "
+"from your own experience, observations, and/or reading.Read for conciseness, clarity of thought, and form."
+msgstr ""
+"Цензура в библиотеках «Все мы можем вспомнить книгу, которую, как мы надеемся, никто из наших детей "
+"или других детей не взял с полки. Но если у меня есть право убрать эту книгу с полки - эту работу я "
+"ненавижу - то и у вас точно такое же право, как и у всех остальных. А потом у нас на полке не осталось "
+"книг для кого-либо из нас. - Кэтрин Патерсон, автор. Напишите убедительное эссе в газету, отражающее "
+"ваши взгляды на цензуру в библиотеках. Считаете ли вы, что определенные материалы, такие как книги, "
+"музыка, фильмы, журналы и т. Д., Следует убрать с полок, если они будут сочтены оскорбительными? "
+"Подкрепите свою позицию убедительными аргументами из собственного опыта, наблюдений и / или чтения. "
+"Прочитайте для краткости, ясности мысли и формы."
+
+#: openassessment/xblock/defaults.py:20
+msgid "Ideas"
+msgstr "Идеи"
+
+#: openassessment/xblock/defaults.py:20
+msgid "Determine if there is a unifying theme or main idea."
+msgstr "Определите, есть ли объединяющая тема или основная идея."
+
+#: openassessment/xblock/defaults.py
+msgid "Poor"
+msgstr "Плохо"
+
+#: openassessment/xblock/defaults.py:27
+msgid ""
+"Difficult for the reader to discern the main idea.  Too brief "
+"or too repetitive to establish or maintain a focus."
+msgstr ""
+"Читателю сложно понять основную идею. Слишком краткий или слишком "
+"повторяющийся, чтобы установить или сохранить фокус."
+
+#: openassessment/xblock/defaults.py
+msgid "Fair"
+msgstr "Справедливо"
+
+#: openassessment/xblock/defaults.py:31
+msgid "Presents a unifying theme or main idea, but may include "
+"minor tangents.  Stays somewhat focused on topic and task."
+msgstr "Представляет объединяющую тему или основную идею, но может включать "
+"незначительные касательные. Остается несколько сфокусированным на теме и задаче."
+
+#: openassessment/xblock/defaults.py
+msgid "Good"
+msgstr "Хорошо"
+
+#: openassessment/xblock/defaults.py
+msgid "Excellent"
+msgstr "Отлично"
+
+#: openassessment/xblock/defaults.py:35
+msgid "Presents a unifying theme or main idea without going off "
+"on tangents.  Stays completely focused on topic and task."
+msgstr ""
+"Представляет объединяющую тему или основную идею, не касаясь касательных. "
+"Остается полностью сосредоточенным на теме и задаче."
+
+#: openassessment/xblock/defaults.py:41
+msgid "Content"
+msgstr "Содержание"
+
+#: openassessment/xblock/defaults.py:42
+msgid "Assess the content of the submission"
+msgstr "Оценить содержание представления"
+
+
+#: openassessment/xblock/defaults.py:47
+msgid "Includes little information with few or no details or unrelated details. "
+"Unsuccessful in attempts to explore any facets of the topic."
+msgstr "Включает в себя мало информации с небольшим количеством или без "
+"подробностей или не связанных деталей. Безуспешно в попытках исследовать любые грани темы."
+
+#: openassessment/xblock/defaults.py:47
+msgid "Includes little information and few or no details.  Explores only one or two facets of the topic."
+msgstr "Включает мало информации и мало или вообще никаких деталей. Исследует только один или два аспекта темы."
+
+#: openassessment/xblock/defaults.py:55
+msgid "Includes sufficient information and supporting details. (Details may "
+"not be fully developed; ideas may be listed.)  Explores some facets of the topic."
+msgstr "Включает в себя достаточную информацию и вспомогательные детали. (Детали могут "
+"быть не полностью разработаны; идеи могут быть перечислены.) Изучает некоторые аспекты темы."
+
+#: openassessment/xblock/defaults.py:59
+msgid "Includes in-depth information and exceptional supporting details "
+"that are fully developed.  Explores all facets of the topic."
+msgstr "Включает в себя подробную информацию и исключительные "
+"вспомогательные детали, которые полностью разработаны. Исследует все аспекты темы."
+
+#: openassessment/xblock/defaults.py:59
+msgid "(Optional) What aspects of this response stood out to you? "
+"What did it do well? How could it be improved?"
+msgstr "(Необязательно). Какие аспекты этого ответа вам понравились? "
+"Что это хорошо? Как это можно улучшить?"
+
+#: openassessment/xblock/defaults.py:74
+msgid "I think that this response..."
+msgstr "Я думаю, что это ответ ..."
+
+#: openassessment/xblock/defaults.py
+msgid ""
+"Replace this text with your own sample response for this assignment. "
+"Then, under Response Score to the right, select an option for each criterion. "
+"Learners practice performing peer assessments by assessing this response and comparing "
+"the options that they select in the rubric with the options that you specified."
+msgstr ""
+"Замените этот текст собственным примером ответа для этого задания. Затем в разделе "
+"«Оценка ответов» выберите параметр для каждого критерия. Учащиеся практикуются в "
+"проведении взаимных оценок, оценивая этот ответ и сравнивая варианты, которые они "
+"выбирают в рубрике, с опциями, которые вы указали."
+
+#: openassessment/xblock/defaults.py
+msgid ""
+"Replace this text with another sample response, "
+"and then specify the options that you would select for this response."
+msgstr ""
+"Замените этот текст другим примером ответа, а затем укажите параметры, "
+"которые вы выбрали бы для этого ответа."
