--- a/openassessment/locale/ru/LC_MESSAGES/django.po
+++ b/openassessment/locale/ru/LC_MESSAGES/django.po
@@ -2,7 +2,7 @@
 # edX translation file
 # Copyright (C) 2018 edX
 # This file is distributed under the GNU AFFERO GENERAL PUBLIC LICENSE.
-# 
+#
 # Translators:
 # Alexandr Kosharny <acosarnii@gmail.com>, 2016
 # ovoschee <all.spam.there@gmail.com>, 2014
@@ -1315,9 +1315,9 @@ msgstr "Поставьте оценку согласно критериям."
 #, python-format
 msgid ""
 "\n"
-"                                        Response for: %(student_username)s\n"
+"                                        Response for: %(student_email)s\n"
 "                                    "
-msgstr "\nОтвет: %(student_username)s"
+msgstr "\nОтвет: %(student_email)s"
 
 #: openassessment/templates/openassessmentblock/staff_area/oa_staff_grade_learners_assessment.html:20
 #: openassessment/templates/openassessmentblock/staff_area/oa_staff_override_assessment.html:19
